--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-drag-resize": "^0.1.4",
     "react-draggable": "^4.4.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-select-country-list": "^2.2.3",
