--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.2",
+    "firebase": "^7.20.0",
     "framer-motion": "^4.1.17",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-copy-to-clipboard": "^5.0.3",
@@ -19,12 +21,12 @@
     "react-draggable": "^4.4.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-parallax": "^2.4.0",
     "react-select": "^4.3.1",
     "react-select-country-list": "^2.2.3",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.0.1",
-    "firebase": "^7.20.0"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
